# hadar

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.gitea/workflows/: ci.yaml
api/: Dockerfile  config.py  dependencies.py  main.py  queries.py  requirements.txt  schemas.py
api/routers/: devices.py  events.py  readings.py  summary.py
api/tests/: conftest.py  test_queries.py
data/plans/: frontend-implementation-plan-2026-05-08.md  k3s-single-workload-multicontainer-plan-2026-05-08.md  next-steps-2026-05-08.md
db/: __init__.py  anomaly_events.sql  session.py
db/models/: __init__.py  anomaly_event.py  appliance.py  device.py  device_rename.py  energy_reading.py  error_log.py  event_log.py  load_group.py  load_group_member.py  plug_load_group.py  plug_load_group_history.py  temperature_reading.py  topic_payload_identifier.py
docs/: architecture-diagram.html  zigbee_db_schema.sql
ingestion-pipeline/: .env.example  Dockerfile  config.py  processor.py  pyproject.toml  requirements.txt
ingestion-pipeline/ingest/: mqtt_consumer.py  topic_mapper.py
ingestion-pipeline/repos/: appliance_repo.py  device_rename_repo.py  device_repo.py  energy_repo.py  error_log_repo.py  load_group_repo.py  plug_repo.py  temperature_repo.py  topic_payload_identifier_repo.py
ingestion-pipeline/schemas/: __init__.py  appliance.py  device.py  device_rename.py  energy_reading.py  error_log.py  event_log.py  load_group.py  load_group_member.py  plug.py  plug_load_group.py  plug_load_group_history.py  temperature_reading.py  topic_payload_identifier.py
ingestion-pipeline/services/: assignment_service.py  device_rename_service.py  device_service.py  energy_service.py  error_log_service.py  event_queue.py  load_group_service.py  temperature_service.py  topic_payload_identifier_service.py
ingestion-pipeline/tests/: conftest.py  test_mqtt_consumer.py
ingestion-pipeline/utils/: device_utils.py  energy_reading_utils.py  load_group_utils.py  plug_utils.py  temperature_reading_utils.py
isolation-forest/: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  requirements.txt
isolation-forest/data/: plan-data-pipeline.md  project-overview.md  (+1 more)
k3s/: README.md  deploy-notes.md  namespace.yaml  storage.yaml
scoring-pipeline/: .env.example  Dockerfile  README.md  config.py  main.py  requirements.txt
ui/: .env.example  Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json
(+75 files in other folders)
