[project]
name = "hadar"
version = "0.1.0"
description = "Smart Home Anomaly Detector — temperature & energy monitoring with ML"
authors = [{name = "Haedon Kaufman", email = "haka9670@gmail.com"}]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["api", "ingestion-pipeline", "isolation-forest", "scoring-pipeline", "db"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "db",
    "dependencies",
    "ingest",
    "pipeline",
    "queries",
    "repos",
    "routers",
    "schemas",
    "services",
    "utils",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

# The shared `db/` package consumes a `config` module that each service
# supplies at runtime inside its own container, so it is intentionally not
# resolvable when type-checking `db/` in isolation.
[[tool.mypy.overrides]]
module = "config"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: requires a reachable test database"]
